Added converting of multiple pdf files to single png